--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         .tag {
             margin-left: .5rem;
             margin-right: .5rem;
+            float:left;
         }
         #tweetList div {
             line-height: 2rem;
